fix module sidebar, fix z-indexing

--- a/theme/public/css/theme.css
+++ b/theme/public/css/theme.css
@@ -25,7 +25,7 @@
 }
 .custom-main-navbar {
   background-color: #EBEBEB;
-  z-index: auto;
+  z-index: 1040;
 }
 @media (min-width: 768px){
   .navbar-right {
